--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
                         <li><a href="#!">Как это работает</a></li>
                         <li><a href="#!">блог</a></li>
                         <li><a href="#!">о компании</a></li>
-                        <li><a href="#!">производителям</a></li>
-                        <li><a href="#!">проекты</a></li>
-                        <li><a href="#!">контакты</a></li>
-                    </ul>
-                </nav>
+
+
             </div>
-        </div>
     </header>
     <section id="main_block">
         <div class="container">
@@ -58,8 +54,7 @@
                 </div>
 
                 <img src="./img/header/g43.svg" alt="">
-                <p>Лучшее решение для небольших<br>
-                    интернет-магазинов и производителей</p>
+                <p>Лучшее решение для небольших<br> интернет-магазинов и производителей</p>
                 <button href="#!">Хочу на AliExpress</button>
             </div>
         </div>
@@ -70,8 +65,7 @@
                 <div class="left_path">
                     <div class="label">Ситуация </div>
                     <img src="./img/problem/girl.png" alt="girl">
-                    <p>Вы тратите много сил и денег на маркетинг и рекламу своих товаров. Самые эффективные из каналов —
-                        дорогие и требуют большой работы.</p>
+                    <p>Вы тратите много сил и денег на маркетинг и рекламу своих товаров. Самые эффективные из каналов — дорогие и требуют большой работы.</p>
                 </div>
                 <div class="right_path">
                     <div class="label">Решение</div>
@@ -82,9 +76,7 @@
                         </div>
                         <div class="description">
                             <div class="tool_tip">Точнее, их два.</div>
-                            Сотрудничать с существующим магазином
-                            на AliExpress и избавить себя от забот вроде вопросов колл-центра, хранения и доставки.
-                            И опять же – не тратиться на маркетинг.
+                            Сотрудничать с существующим магазином на AliExpress и избавить себя от забот вроде вопросов колл-центра, хранения и доставки. И опять же – не тратиться на маркетинг.
                         </div>
                     </div>
                     <div class="problem_item">
@@ -93,9 +85,7 @@
                             <span>2</span>
                         </div>
                         <div class="description">
-                            Cоздать магазин на маркетплейсе AliExpress
-                            и реализовывать товары покупателям со всего мира. Один емкий и грамотный канал продаж
-                            заменит все рекламные инструменты, которыми вы пользовались до этого.
+                            Cоздать магазин на маркетплейсе AliExpress и реализовывать товары покупателям со всего мира. Один емкий и грамотный канал продаж заменит все рекламные инструменты, которыми вы пользовались до этого.
 
                         </div>
                     </div>
@@ -106,8 +96,7 @@
                         </div>
                         <div class="description">
                             <div class="tool_tip">Точнее, их три.</div>
-                            Лучшее решение для небольших
-                            интернет-магазинов и производителей
+                            Лучшее решение для небольших интернет-магазинов и производителей
                         </div>
                     </div>
                 </div>
@@ -118,13 +107,11 @@
         <div class="container">
             <div class="content">
                 <div class="left_path">
-                    <h2>Что вы получите с магазином <br>
-                        на AliExpress?</h2>
+                    <h2>Что вы получите с магазином <br> на AliExpress?</h2>
                     <div class="advantages_items">
                         <div class="advantages_item">
                             <img src="./img/advantages/icon1.png" alt="calc">
-                            <p>Снизите операционные расходы<br>
-                                и расходы на маркетинг.</p>
+                            <p>Снизите операционные расходы<br> и расходы на маркетинг.</p>
                         </div>
                         <div class="advantages_item">
                             <img src="./img/advantages/icon2.png" alt="calc">
@@ -136,8 +123,7 @@
                         </div>
                         <div class="advantages_item">
                             <img src="./img/advantages/icon4.png" alt="calc">
-                            <p>В 2020 году еще увеличите продажи за счет покупателей
-                                из стран СНГ.</p>
+                            <p>В 2020 году еще увеличите продажи за счет покупателей из стран СНГ.</p>
                         </div>
                     </div>
                     <button class="my_button">
@@ -176,7 +162,7 @@
                         <div class="right_path_item">
                             <img src="./img/reasons/krujok.png" alt="circle">
                             <p>Помогаем с описанием товаров.
-                            <p>
+                                <p>
                         </div>
                         <div class="right_path_item">
                             <img src="./img/reasons/krujok.png" alt="circle">
@@ -208,17 +194,15 @@
                         <img src="./img/reasons/home.png" alt="home">
                         <div class="item_text">
                             <h6>Небольшим интернет-магазинам </h6>
-                            <p>С ограниченными ресурсами и бюджетом
-                                на рекламу.</p>
+                            <p>С ограниченными ресурсами и бюджетом на рекламу.</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="./img/reasons/zavod.png" alt="factor">
                         <div class="item_text">
                             <h6>Небольшим производителям</h6>
-                            <p>Готовы поставлять товар реселлеру и не хотят заниматься продвижением товаров
-                                конечному
-                                покупателю.</p>
+                            <p>Готовы поставлять товар реселлеру и не хотят заниматься продвижением товаров конечному покупателю.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -237,12 +221,10 @@
                         <img src="./img/process/ProcessNumber.png" alt="ProcessNumber">
                         <span>3</span>
                     </div>
-                    <p>Ищет партнеров-реселлеров
-                        при необходимости и помогает наладить взаимодействие.</p>
+                    <p>Ищет партнеров-реселлеров при необходимости и помогает наладить взаимодействие.</p>
                 </div>
                 <div class="left_item second">
-                    <p>Представляет интересы мерчантов
-                        и коммуницирует с площадкой по всем установочным вопросам.</p>
+                    <p>Представляет интересы мерчантов и коммуницирует с площадкой по всем установочным вопросам.</p>
                     <div class="number">
                         <img src="./img/process/ProcessNumber.png" alt="ProcessNumber">
                         <span>2</span>
@@ -253,14 +235,11 @@
                         <img src="./img/process/ProcessNumber.png" alt="ProcessNumber">
                         <span>4</span>
                     </div>
-                    <p>Уже освоил алгоритм продвижения магазина и готов его применить для вашей раскрутки на
-                        маркетплейсе.
+                    <p>Уже освоил алгоритм продвижения магазина и готов его применить для вашей раскрутки на маркетплейсе.
                     </p>
                 </div>
                 <div class="left_item first">
-                    <p>Проводник ищет магазины
-                        и производителей и заводит
-                        их на маркетплейс.
+                    <p>Проводник ищет магазины и производителей и заводит их на маркетплейс.
                     </p>
                     <div class="number">
                         <img src="./img/process/ProcessNumber.png" alt="ProcessNumber">
@@ -272,8 +251,7 @@
     </section>
     <section id="successes">
         <div class="container">
-            <h1>Чего добились с Проводником
-                другие магазины?</h1>
+            <h1>Чего добились с Проводником другие магазины?</h1>
             <img class="packet" src="./img/successes/packet.png" alt="packet">
             <div class="content">
                 <div class="label">Кейс</div>
@@ -282,8 +260,7 @@
                 </div>
                 <div class="right_path">
                     <h2>Продвижение и раскрутка магазина одежды </h2>
-                    <p>Проводник ищет магазины и производителей и заводит их на маркетплейс. Уже освоил алгоритм
-                        продвижения магазина и готов его применить для вашей раскрутки на маркетплейсе. </p>
+                    <p>Проводник ищет магазины и производителей и заводит их на маркетплейс. Уже освоил алгоритм продвижения магазина и готов его применить для вашей раскрутки на маркетплейсе. </p>
                     <div class="successes_items">
                         <div class="successes_item">
                             <img src="./img/successes/circle.png" alt="circle">
@@ -293,8 +270,8 @@
                         <div class="successes_item">
                             <img src="./img/successes/circle.png" alt="circle">
                             <h3>789 654</h3>
-                            <h4>Просмотров
-                                магазина</h4>
+                            <h4>Просмотров магазина
+                            </h4>
                         </div>
 
                     </div>
@@ -322,8 +299,7 @@
                         <img src="./img/steps/NumBG.png" alt="NumBG">
                         <span>2</span>
                     </div>
-                    <p>Обсудим ваши задачи
-                        с менеджером.</p>
+                    <p>Обсудим ваши задачи с менеджером.</p>
                     <img src="./img/steps/arrow.png" alt="arrow">
                 </div>
                 <div class="steps_item">
@@ -331,8 +307,7 @@
                         <img src="./img/steps/NumBG.png" alt="NumBG">
                         <span>3</span>
                     </div>
-                    <p>Сформируем
-                        пакет услуг.</p>
+                    <p>Сформируем пакет услуг.</p>
                     <img src="./img/steps/arrow.png" alt="arrow">
                 </div>
                 <div class="steps_item">
@@ -340,8 +315,8 @@
                         <img src="./img/steps/NumBG.png" alt="NumBG">
                         <span>4</span>
                     </div>
-                    <p>Заключим
-                        договор.</p>
+                    <p>Заключим договор.
+                    </p>
                 </div>
             </div>
         </div>
@@ -379,8 +354,7 @@
                             </div>
                         </div>
                         <div class="contacts_footer">
-                            <p>Оправляя форму, вы соглашаетесь на сбор, обработку
-                                и хранение ваших данных сотрудниками компании. <a href="#!">Политика
+                            <p>Оправляя форму, вы соглашаетесь на сбор, обработку и хранение ваших данных сотрудниками компании. <a href="#!">Политика
                                     конфиденциальности</a>
                             </p>
                             <div class="my_button black_button">Отправить</div>
@@ -411,8 +385,7 @@
             <div class="footer_bottom">
                 <div class="laws">
                     <img src="./img/©.png" alt="©">
-                    <p>2018.<br>
-                        Все права защищены.</p>
+                    <p>2018.<br> Все права защищены.</p>
                 </div>
                 <div class="adress">
                     <img src="./img/header/adress.png" alt="">
